fix: fixing carousel alignment

--- a/assets/css/carousel/carousel.css
+++ b/assets/css/carousel/carousel.css
@@ -20,6 +20,7 @@ input{
     transform-style: preserve-3d;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .cards label{
